# Laboratoare

./: README.md  pw.rar
Anul 3/Semestrul 2/ASC/Lab 4/: task1a.c  task1b.c  task1c.c  task3.c  task5.c
Anul 3/Semestrul 2/ASC/Lab1/: fisier_input  hello  task2.py  task3.py  task4.py
Anul 3/Semestrul 2/ASC/Lab11/: CMakeLists.txt  Makefile  README  skl_device.cl  skl_host.cpp
Anul 3/Semestrul 2/ASC/Lab2/: task1.py  task2.py  task3.py
Anul 3/Semestrul 2/ASC/Lab3/: barrier.py  event.py  gossiping.py
Anul 3/Semestrul 2/ASC/Lab4/: task2.c  task4.c  task5.c
Anul 3/Semestrul 2/ASC/Lab5/: 1.c  2.c  3.c  Makefile  bonus.c
Anul 3/Semestrul 2/ASC/Lab9/: README  dbuff_spu.cpp
Anul 3/Semestrul 2/ASC/Lab9/ppu/: Makefile  mbox_ppu.cpp
Anul 3/Semestrul 2/ASC/Lab9/spu/: Makefile  mbox_spu.cpp
Anul 3/Semestrul 2/SO/Lab12/: mini.c
Anul 3/Semestrul 2/SO/Lab3/: tiny.c  tiny.c.win
Anul 3/Semestrul 2/SO/Lab4/: mycp.c  paging.c
Anul 3/Semestrul 2/SO/Lab6/: prot.c
Anul 4/Semestrul 2/PW/: index.html  mystylesheet.css
Anul 4/Semestrul2/PW/: mystylesheet.css
Anul4/Semestrul2/PW/: mystylesheet.css
